# file_monitor

./: .env  main.py  pyproject.toml
app/: server.py  settings.py
app/domain/: models.py
app/migrations/: env.py
app/migrations/versions/: a010398ea2cc_add_scan_tasks_table.py
app/repositories/: scan_task_repository.py  user_repository.py
app/schemas/: scan_task.py  user.py
app/services/: monitor_manager.py  scan_task_service.py  user_service.py
app/storage/: db.py  redis_client.py
app/web/: api.py  scan_tasks.py  users.py
