[project]
name = "file-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.3.4",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "bcrypt==4.0.1",
]
